exercises/networkpolicies/other-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other-pod
  labels:
    app: other
spec:
  containers:
  - name: other
    image: busybox:1.36
    command: ["sleep", "3600"]
